--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,9 @@
 .header-col {
-  background-color: #BDD7F3;
+  background-color: #BBC5C7;
 }
 
 .header-text {
-  font-size: 22px;
+  font-size: 26px;
   font-weight: bold;
   color: #666666;
   padding: 2vh 0 0 3vw;
