--- a/src/Components/Store/StoresMap.css
+++ b/src/Components/Store/StoresMap.css
@@ -1,4 +1,23 @@
 .map-container {
-  width: 40vw;
-  height: 40vw;
+  width: 35vw;
+  height: 30vw;
+}
+
+.store-map-container {
+  margin-right: 3%;
+  width: 40%;
+}
+
+.map-inner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.store-map-title {
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 10px;
 }
